- TMR implementierung angefangen

--- a/Anzeige.html
+++ b/Anzeige.html
@@ -146,8 +146,8 @@
                             <td>{{PCLATH}}</td>	<td>PCLATH</td>
                         </tr>
                         <tr>
-                            <td>INTCON</td>	<td>{{INTCON}}</td>
-                            <td>{{INTCON}}</td>	<td>INTCON</td>
+                            <td>INTCON</td>	<td>{{ram[11]}}</td>
+                            <td></td>	<td>INTCON</td>
                         </tr>
                     </table>
 
