--- a/Anzeige.html
+++ b/Anzeige.html
@@ -177,7 +177,7 @@
                 </div>
             <div class="ram">
                 <!--Anzeige der General Purpose Registers-->
-                <h2>GPR</h2>
+                <h2>Speicherbelegung</h2>
                 <table ng-if="ram" class="table table-striped">
                     <tr>
                         <td>{{ram[0]}}</td>	 <td>{{ram[1]}}</td>  <td>{{ram[2]}}</td>  <td>{{ram[3]}}</td>  <td>{{ram[4]}}</td>	 <td>{{ram[5]}}</td>  <td>{{ram[6]}}</td>  <td>{{ram[7]}}</td>
@@ -204,7 +204,10 @@
                         <td>{{ram[56]}}</td> <td>{{ram[57]}}</td> <td>{{ram[58]}}</td> <td>{{ram[59]}}</td>	<td>{{ram[60]}}</td> <td>{{ram[61]}}</td> <td>{{ram[62]}}</td> <td>{{ram[63]}}</td>
                     </tr>
                     <tr>
-                        <td>{{ram[64]}}</td> <td>{{ram[65]}}</td> <td>{{ram[66]}}</td> <td>{{ram[67]}}</td>
+                        <td>{{ram[64]}}</td> <td>{{ram[65]}}</td> <td>{{ram[66]}}</td> <td>{{ram[67]}}</td> <td>{{ram[68]}}</td> <td>{{ram[69]}}</td> <td>{{ram[70]}}</td> <td> {{ram[71]}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{ram[72]}}</td> <td>{{ram[73]}}</td> <td>{{ram[74]}}</td> <td>{{ram[75]}}</td> <td>{{ram[76]}}</td> <td>{{ram[77]}}</td> <td>{{ram[78]}}</td> <td>{{ram[79]}}</td>
                     </tr>
                 </table>
             </div>
