--- a/Anzeige.html
+++ b/Anzeige.html
@@ -59,7 +59,7 @@
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="oneStep()">Ein Schritt</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="stoppapp()">Stop</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="reset()">Reset</button>
-                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="">Test</button>
+                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="runTimer()">Test</button>
                                </form>
                            </li>
                         </ul>
