SFR in Buttons konvertiert

--- a/Anzeige.html
+++ b/Anzeige.html
@@ -106,47 +106,47 @@
                     <h2>SFR</h2>
                     <table align="left" class="table table-striped">
                         <tr>
-                            <td>Indirect_addr</td> <td>{{Indirect_addr}}</td>
+                            <td>Indirect_addr</td> <td><button type="button" size="2" class="btn btn-default" data-toggle="modal" data-target="#ramModal" data-whatever="00">{{ram[0]}}</button></td>
                             <td>{{Indirect_addr}}</td> <td>Indirect_addr</td>
                         </tr>
                         <tr>
-                            <td>TMR0</td> <td>{{TMR0}}</td>
+                            <td>TMR0</td> <td><button type="button" size="2" class="btn btn-default" data-toggle="modal" data-target="#ramModal" data-whatever="01">{{ram[1]}}</button></td>
                             <td>{{OPTION_REG}}</td> <td>OPTION_REG</td>
                         </tr>
                         <tr>
-                            <td>PCL</td> <td>{{PCL}}</td>
+                            <td>PCL</td> <td><button type="button" size="2" class="btn btn-default" data-toggle="modal" data-target="#ramModal" data-whatever="02">{{ram[2]}}</button></td>
                             <td>{{PCL}}</td> <td>PCL</td>
                             </tr>
                         <tr>
-                            <td>STATUS</td> <td>{{ram[3]}}</td>
+                            <td>STATUS</td> <td><button type="button" size="2" class="btn btn-default" data-toggle="modal" data-target="#ramModal" data-whatever="03">{{ram[3]}}</button></td>
                             <td>{{STATUS}}</td> <td>STATUS</td>
                             </tr>
                         <tr>
-                            <td>FSR</td> <td>{{FSR}}</td>
+                            <td>FSR</td> <td><button type="button" size="2" class="btn btn-default" data-toggle="modal" data-target="#ramModal" data-whatever="04">{{ram[4]}}</button></td>
                             <td>{{FSR}}</td> <td>FSR</td>
                             </tr>
                         <tr>
-                            <td>PORTA</td> <td>{{ram[5]}}</td>
+                            <td>PORTA</td> <td><button type="button" size="2" class="btn btn-default" data-toggle="modal" data-target="#ramModal" data-whatever="05">{{ram[5]}}</button></td>
                             <td>{{TRISA}}</td> <td>TRISA</td>
                         </tr>
                         <tr>
-                            <td>PORTB</td> <td>{{ram[6]}}</td>
+                            <td>PORTB</td> <td><button type="button" size="2" class="btn btn-default" data-toggle="modal" data-target="#ramModal" data-whatever="06">{{ram[6]}}</button></td>
                             <td>{{TRISB}}</td> <td>TRISB</td>
                         </tr>
                         <tr>
-                            <td>EEDATA</td>	<td>{{EEDATA}}</td>
+                            <td>EEDATA</td>	<td><button type="button" size="2" class="btn btn-default" data-toggle="modal" data-target="#ramModal" data-whatever="08">{{ram[7]}}</button></td>
                             <td>{{EECON1}}</td>	<td>EECON1</td>
                         </tr>
                         <tr>
-                            <td>EEADR</td>	<td>{{EEADR}}</td>
+                            <td>EEADR</td>	<td><button type="button" size="2" class="btn btn-default" data-toggle="modal" data-target="#ramModal" data-whatever="09">{{ram[8]}}</button></td>
                             <td>{{EECON2}}</td>	<td>EECON2</td>
                         </tr>
                         <tr>
-                            <td>PCLATH</td>	<td>{{PCLATH}}</td>
+                            <td>PCLATH</td>	<td><button type="button" size="2" class="btn btn-default" data-toggle="modal" data-target="#ramModal" data-whatever="0A">{{ram[9]}}</button></td>
                             <td>{{PCLATH}}</td>	<td>PCLATH</td>
                         </tr>
                         <tr>
-                            <td>INTCON</td>	<td>{{ram[11]}}</td>
+                            <td>INTCON</td>	<td><button type="button" size="2" class="btn btn-default" data-toggle="modal" data-target="#ramModal" data-whatever="0B">{{ram[11]}}</button></td>
                             <td></td>	<td>INTCON</td>
                         </tr>
                     </table>
