--- a/Anzeige.html
+++ b/Anzeige.html
@@ -54,7 +54,7 @@
                         <ul class="nav navbar-nav">
                            <li>
                                <form class="navbar-form navbar-left" role="search" >
-                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="Startapp()">Start</button>
+                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="runPic()">Start</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="oneStepBack()">Ein Schritt zurück</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="oneStep()">Ein Schritt</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="stoppapp()">Stop</button>
