Ersten Programme Laufen, RLF noch fehlerhaft

--- a/Anzeige.html
+++ b/Anzeige.html
@@ -164,14 +164,14 @@
                             <td>0</td>
                         </tr>
                         <tr>
-                            <td><button ng-click="changePortBbit(7)">7</button></td>
-                            <td><button ng-click="changePortBbit(6)">6</button></td>
-                            <td><button ng-click="changePortBbit(5)">5</button></td>
-                            <td><button ng-click="changePortBbit(4)">4</button></td>
-                            <td><button ng-click="changePortBbit(3)">3</button></td>
-                            <td><button ng-click="changePortBbit(2)">2</button></td>
-                            <td><button ng-click="changePortBbit(1)">1</button></td>
-                            <td><button ng-click="changePortBbit(0)">0</button></td>
+                            <td><button ng-click="changePortBbit(7)">{{PortBbits[7]}}</button></td>
+                            <td><button ng-click="changePortBbit(6)">{{PortBbits[6]}}</button></td>
+                            <td><button ng-click="changePortBbit(5)">{{PortBbits[5]}}</button></td>
+                            <td><button ng-click="changePortBbit(4)">{{PortBbits[4]}}</button></td>
+                            <td><button ng-click="changePortBbit(3)">{{PortBbits[3]}}</button></td>
+                            <td><button ng-click="changePortBbit(2)">{{PortBbits[2]}}</button></td>
+                            <td><button ng-click="changePortBbit(1)">{{PortBbits[1]}}</button></td>
+                            <td><button ng-click="changePortBbit(0)">{{PortBbits[0]}}</button></td>
                         </tr>
                     </table>
                 </div>
