--- a/Anzeige.html
+++ b/Anzeige.html
@@ -174,6 +174,29 @@
                             <td><button ng-click="changePortBbit(0)">{{PortBbits[0]}}</button></td>
                         </tr>
                     </table>
+                    <h2>Port A</h2>
+                    <table>
+                        <tr>
+                            <td>7</td>
+                            <td>6</td>
+                            <td>5</td>
+                            <td>4</td>
+                            <td>3</td>
+                            <td>2</td>
+                            <td>1</td>
+                            <td>0</td>
+                        </tr>
+                        <tr>
+                            <td><button ng-click="changePortAbit(7)">{{PortAbits[7]}}</button></td>
+                            <td><button ng-click="changePortAbit(6)">{{PortAbits[6]}}</button></td>
+                            <td><button ng-click="changePortAbit(5)">{{PortAbits[5]}}</button></td>
+                            <td><button ng-click="changePortAbit(4)">{{PortAbits[4]}}</button></td>
+                            <td><button ng-click="changePortAbit(3)">{{PortAbits[3]}}</button></td>
+                            <td><button ng-click="changePortAbit(2)">{{PortAbits[2]}}</button></td>
+                            <td><button ng-click="changePortAbit(1)">{{PortAbits[1]}}</button></td>
+                            <td><button ng-click="changePortAbit(0)">{{PortAbits[0]}}</button></td>
+                        </tr>
+                    </table>
                 </div>
             <div class="ram">
                 <!--Anzeige des gesamten RAM-->
