pclath funktioniert, wdt buggy

--- a/Anzeige.html
+++ b/Anzeige.html
@@ -61,7 +61,7 @@
                                            <div class="input-group">
                                                <span class="form-control">Watchdog</span>
                                                <span class="input-group-addon">
-                                                    <input type="checkbox" aria-label="..." ng-click="changeWatchdogState()">
+                                                    <input type="checkbox" aria-label="..." ng-model="watchdogCB" ng-click="changeWatchdogState()">
                                                 </span>
                                            </div><!-- /input-group -->
                                        </form>
