CSS kommentiert und nginit im Ablauf-div hinzugefügt

--- a/Anzeige.html
+++ b/Anzeige.html
@@ -34,7 +34,7 @@
     <div ng-controller="Befehlsspeichercontroller">
         <div ng-controller="CPU">
             <!--Begin der Navbar-->
-            <div ng-controller="AblaufsCtrl">
+            <div ng-controller="AblaufsCtrl" ng-init="reset()">
                     <nav class="navbar navbar-default">
                         <div class="container-fluid">
                             <!-- Brand and toggle get grouped for better mobile display -->
